--- a/dashboard.html
+++ b/dashboard.html
@@ -6,53 +6,56 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
    <link rel="stylesheet" href="css/trc-main.css">
-   <link rel="stylesheet" href="css/bootstrap.min.css">
-   <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+   <link rel="stylesheet" href="css/reset.css">
 
    <title>TRC Project</title>
 
 </head>
 <body>
+
    <header>
-      <!-- NAVIGATION BAR -->
-      <nav class="navbar navbar-default navbar-static-top">
-
-         <div class="container-fluid">
-            <!-- BRAND BUTTON -->
-            <div class="navbar-header">
-               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-               </button>
-               <a class="navbar-brand" href="#">TRC</a>
-            </div>
-
-
-            <!-- OTHER NAV BUTTONS -->
-            <ul class="nav navbar-nav navbar-right">
-               <li class="active"><a href="#">Tasks<span class="sr-only">(current)</span></a></li>
-               <li><a href="#">Routes</a></li>
-               <li><a href="#">Calendar</a></li>
-            </ul>
-         </div>
+      <nav>
+         <h2 id="logo"><a href="#">Logo</a></h2>
+         <ul>
+            <li><a href="">Todo</a></li>
+            <li><a href="">Router</a></li>
+            <li><a href="">Calendar</a></li>
+         </ul>
       </nav>
    </header>
 
    <main>
-      <div class="wrapper">
 
+      <!-- TASK INPUT BAR -->
+      <div id="task">
+         <input type="text" placeholder="Enter a task.." id="item">
+         <button id="add">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+      	 viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve">
+         	<g><path class="fill" d="M16,8c0,0.5-0.5,1-1,1H9v6c0,0.5-0.5,1-1,1s-1-0.5-1-1V9H1C0.5,9,0,8.5,0,8s0.5-1,1-1h6V1c0-0.5,0.5-1,1-1s1,0.5,1,1v6h6C15.5,7,16,7.5,16,8z"/></g>
+         </svg>
+         </button>
       </div>
+
+      <!-- CURRENT TASKS -->
+      <ul class="todo" id="todo_current">
+         <li>This is an item.</li>
+         <button id="remove"></button>
+         <button id="complete"></button>
+      </ul>
+
+      <!-- COMPLETED TASKS -->
+      <ul class="todo" id="todo_completed">
+         <li>This is an item.</li>
+      </ul>
    </main>
 
 
 
 
    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-   <script type="text/javascript" src="js/bootstrap.min.js"></script>
-   <script type="text/javascript" src="js/ jquery.validate.min.js"></script>
 
 </body>
 </html>
